@@ -31,8 +31,8 @@ import ru.hh.jclient.common.util.storage.SingletonStorage;
 
 import java.io.IOException;
 import java.net.ConnectException;
+import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
@@ -262,6 +262,10 @@ abstract class BalancingClientTestBase extends HttpClientTestBase {
     http = createHttpClientFactory(httpClient, singletonMap(TEST_UPSTREAM, upstreamConfig), datacenter, allowCrossDCRequests);
   }
 
+  void createHttpClientFactory(Map<String, String> upstreamConfigs, String datacenter, boolean allowCrossDCRequests) {
+    http = createHttpClientFactory(httpClient, upstreamConfigs, datacenter, allowCrossDCRequests);
+  }
+
   Request completeWith(int status, InvocationOnMock iom) throws Exception {
     Response response = mock(Response.class);
 
@@ -277,12 +281,20 @@ abstract class BalancingClientTestBase extends HttpClientTestBase {
   static void assertHostEquals(Request request, String host) {
     assertEquals(host, request.getUri().getHost());
   }
+  static void assertRequestTimeoutEquals(Request request, long timeoutMs) {
+    assertEquals(request.getRequestTimeout(), (int) timeoutMs);
+  }
 
   private HttpClientFactory createHttpClientFactory(AsyncHttpClient httpClient, Map<String, String> upstreamConfigs, String datacenter,
                                                     boolean allowCrossDCRequests) {
     Monitoring monitoring = mock(Monitoring.class);
     upstreamManager = new BalancingUpstreamManager(
-      upstreamConfigs, newSingleThreadScheduledExecutor(), Collections.singleton(monitoring), datacenter, allowCrossDCRequests);
+      upstreamConfigs, newSingleThreadScheduledExecutor(), Set.of(monitoring), datacenter, allowCrossDCRequests) {
+      @Override
+      protected LocalDateTime getNow() {
+        return BalancingClientTestBase.this.getNow();
+      }
+    };
     return new HttpClientFactory(httpClient, singleton("http://" + TEST_UPSTREAM),
         new SingletonStorage<>(() -> httpClientContext), Runnable::run, upstreamManager);
   }
@@ -295,6 +307,9 @@ abstract class BalancingClientTestBase extends HttpClientTestBase {
   }
 
   protected abstract boolean isAdaptive();
+  protected LocalDateTime getNow() {
+    return LocalDateTime.now();
+  }
 
   void assertRequestEquals(Request[] request, String... actual) {
     if (isAdaptive()) {
@@ -358,15 +373,24 @@ abstract class BalancingClientTestBase extends HttpClientTestBase {
 
   static class TestClient extends JClientBase {
     private final boolean adaptive;
+    private String profile;
 
     TestClient(HttpClientFactory http, boolean adaptive) {
       super("http://" + TEST_UPSTREAM, http);
       this.adaptive = adaptive;
     }
 
+    public TestClient withProfile(String profile) {
+      this.profile = profile;
+      return this;
+    }
+
     void get() throws Exception {
       ru.hh.jclient.common.Request request = get(url("/get")).build();
       HttpClient client = http.with(request);
+      if (profile != null) {
+        client = client.withProfile(profile);
+      }
       if (adaptive) {
         client = client.adaptive();
       }
@@ -376,6 +400,9 @@ abstract class BalancingClientTestBase extends HttpClientTestBase {
     void post() throws Exception {
       ru.hh.jclient.common.Request request = post(url("/post")).build();
       HttpClient client = http.with(request);
+      if (profile != null) {
+        client = client.withProfile(profile);
+      }
       if (adaptive) {
         client = client.adaptive();
       }
